--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="50dp"
-    android:background="#000">
+    android:orientation="horizontal"
+    android:background="#003330">
     <com.jiangdg.circleprogressview.CircleProgressView
         android:id="@+id/progressView"
         android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_centerInParent="true"/>
+        android:layout_height="80dp"/>
     <com.jiangdg.circleprogressview.CircleProgressView
         android:id="@+id/progressView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"/>
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"/>
 
     <com.jiangdg.circleprogressview.CircleProgressView
         android:id="@+id/progressView2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"/>
-</RelativeLayout>
+        android:layout_width="80dp"
+        android:layout_height="80dp"/>
+</LinearLayout>
